service.yaml
apiVersion: v1
kind: Service
metadata:
  name: hello-world-service
spec:
  # Select the Pods that make up this Service.
  selector:
    pods-label: hello-world-pods
  ports:
  - port: 80
    targetPort: 8080
